src/chash_map/target/debug/build/crossbeam-utils-c19c0a1d9dcd0e5b/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     | 
    ::: /home/devillove084/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2152:1
     |
2152 | / atomic_int! {
2153 | |     cfg(target_has_atomic = "16"),
2154 | |     cfg(target_has_atomic_equal_alignment = "16"),
2155 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2168 | |     u16 AtomicU16 ATOMIC_U16_INIT
2169 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
